# Admin_panel_sprint_1

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
movies_admin/: README.md
movies_admin/config/settings/: base.py  dev.py  prod.py
movies_admin/movies/: admin.py  models.py
movies_admin/movies/migrations/: 0001_initial.py
schema_design/: README.md  db_schema.sql
sqlite_to_postgres/: README.md  load_data.py  models.py  postgres_saver.py  sqlite_loader.py
